# moltbridge

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LAUNCH_CHECKLIST.md  README.md  TESTING.md  docker-compose.yml  openapi.yaml  package.json  pnpm-lock.yaml  tsconfig.json  tunnel-config.yml
.claude/: context-health.local.json  hook-coordination.local.json  infrastructure-usage.local.json  reflection-metrics.local.json  session-boundary.local.json  testing-metrics.local.json
contracts/: MockERC20.sol  hardhat.config.ts  package.json  pnpm-lock.yaml
contracts/scripts/: deploy.ts
contracts/sol/: MoltBridgeSplitter.sol
contracts/test/: MoltBridgeSplitter.test.ts
docs/: EXPLAINED-FOR-AGENTS.md  EXPLAINED-FOR-HUMANS.md
public/: index.html  openapi.yaml
public/.well-known/: agent.json
public/dashboard/: index.html
scripts/: bootstrap-schema.ts  deploy.ts  generate-keys.ts  seed-graph.ts  seed-sandbox.ts
sdk/js/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/.claude/: context-health.local.json  hook-coordination.local.json  reflection-metrics.local.json  session-boundary.local.json  testing-metrics.local.json
sdk/python/moltbridge/: __init__.py  async_client.py  auth.py  client.py  errors.py  types.py
sdk/python/tests/: test_auth.py  test_client.py
src/: app.ts  index.ts  types.ts
src/api/: routes.ts
src/crypto/: keys.ts
src/db/: neo4j.ts
src/mcp/: server.json  server.ts
src/middleware/: auth.ts  errors.ts  ratelimit.ts  validate.ts
src/services/: broker.ts  consent.ts  credibility.ts  iqs.ts  outcomes.ts  payments.ts  principal.ts  registration.ts  trust.ts  verification.ts  webhooks.ts
tests/helpers/: crypto.ts  mock-neo4j.ts
tests/integration/: api.test.ts  e2e-flow.test.ts  new-endpoints.test.ts  outcomes-ratelimit.test.ts  routes-coverage.test.ts
tests/unit/: auth.test.ts  broker.test.ts  consent.test.ts  credibility.test.ts  crypto-keys.test.ts  errors.test.ts  iqs.test.ts  mcp-server.test.ts  (+9 more)
(+10 files in other folders)
